syntax = "proto3";
package publicawesome.stargaze.claim.v1beta1;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/public-awesome/stargaze/v12/x/claim/types";

enum Action {
  option (gogoproto.goproto_enum_prefix) = false;

  ActionInitialClaim = 0;
  ActionBidNFT = 1;
  ActionMintNFT = 2;
  ActionVote = 3;
  ActionDelegateStake = 4;
}

message ClaimRecord {
  // address of claim user
  string address = 1 [ (gogoproto.moretags) = "yaml:\"address\"" ];

  // total initial claimable amount for the user
  repeated cosmos.base.v1beta1.Coin initial_claimable_amount = 2 [
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"initial_claimable_amount\""
  ];

  // true if action is completed
  // index of bool in array refers to action enum #
  repeated bool action_completed = 4 [
    (gogoproto.moretags) = "yaml:\"action_completed\"",
    (gogoproto.nullable) = false
  ];
}
